Change instance from m4.large to t2.medium

--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -77,8 +77,8 @@ Resources:
   JiraLaunchConfiguration:
     Type: "AWS::AutoScaling::LaunchConfiguration"
     Properties:
-      SpotPrice:
-        Ref: "PMSpotPrice"
+      # SpotPrice:
+      #   Ref: "PMSpotPrice"
       AssociatePublicIpAddress: "true"
       KeyName:
         Ref: "PMKeyName"
