--- a/master.yaml
+++ b/master.yaml
@@ -51,11 +51,10 @@ Parameters:
     Type: "String"
 
   PMJiraInstanceType: 
-    Description: "Enter an instance type. Default is t2.micro."
+    Description: "Enter an instance type. Default is t2.medium."
     Type: "String"
-    Default: "t2.micro" # minimum requirement for Jira is t2.medium.
+    Default: "t2.medium" # minimum requirement for Jira is t2.medium.
     AllowedValues: 
-      - "t2.micro"
       - "t2.medium"
       - "m3.medium"
       - "m4.large"
@@ -208,7 +207,7 @@ Resources:
 
   MyJiraAutoScaling:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraELB"
     Properties:
@@ -232,7 +231,7 @@ Resources:
 
   MyDNS:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraAutoScaling"
     Properties:
