--- a/infrastructure/atlassian-vpc.yaml
+++ b/infrastructure/atlassian-vpc.yaml
@@ -10,7 +10,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
     This template deploys a VPC, with a pair of public and private subnets spread 
     across two (Zone A & Zone B)  Availabilty Zones. It deploys an Internet Gateway,
-    with a default route on the public subnets. It deploy NAT Gateway (in one public AZ), 
+    with a default route on the public subnets. It deploy NAT Gateway (in both public AZ), 
     and default routes for them in the private subnets.
     
 Parameters:
@@ -19,10 +19,6 @@ Parameters:
     Description: "Server Environment name."
     ConstraintDescription: "Choose an Environment from the drop down"
     Type: "String"
-    AllowedValues: 
-      - "dev"
-      - "staging"
-      - "prod"
 
   PMVpcCIDR:
     Description: "Please enter the IP range (CIDR notation) for this VPC"
