Start Install Jira2

--- a/infrastructure/atlassian-rds.yaml
+++ b/infrastructure/atlassian-rds.yaml
@@ -87,7 +87,7 @@ Parameters:
 
 ####### Condition Setup #######
 Conditions: 
-  UseProdEnv: !Equals [ !Ref "PMServerEnv", "prod" ]
+  UseProdEnv: !Equals [ !Ref "PMServerEnv", "dev" ]
 
 Resources:
 
