--- a/infrastructure/atlassian-vpc.yaml
+++ b/infrastructure/atlassian-vpc.yaml
@@ -261,39 +261,47 @@ Resources:
       NatGatewayId: !Ref "MyNATGateway2"
 
 ######## Create Custom Network ACL #######
-  MyNetworkACL:
+  MyPublicNetworkACL:
     Type: "AWS::EC2::NetworkAcl"
     Properties:
       VpcId: !Ref "VPC"
       Tags:
         - Key: "Name"
-          Value: !Sub "${PMServerEnv}-MyNetworkACL"
+          Value: !Sub "${PMServerEnv}-MyPublicNetworkACL"
+
+  MyPrivateNetworkACL:
+    Type: "AWS::EC2::NetworkAcl"
+    Properties:
+      VpcId: !Ref "VPC"
+      Tags:
+        - Key: "Name"
+          Value: !Sub "${PMServerEnv}-MyPrivateNetworkACL"
 
 ######## Associate Public Subnet to Network ACL #######
   MyPublicSubnet1NetworkAclAssociation:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
     Properties:
       SubnetId: !Ref "PublicSubnet1"
-      NetworkAclId: !Ref "MyNetworkACL"
+      NetworkAclId: !Ref "MyPublicNetworkACL"
 
   MyPublicSubnet2NetworkAclAssociation:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
     Properties:
       SubnetId: !Ref "PublicSubnet2"
-      NetworkAclId: !Ref "MyNetworkACL"
+      NetworkAclId: !Ref "MyPublicNetworkACL"
 
 ######## Associate Private Subnet to Network ACL #######
   MyPrivateSubnet1NetworkAclAssociation:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
     Properties:
       SubnetId: !Ref "PrivateSubnet1"
-      NetworkAclId: !Ref "MyNetworkACL"
+      NetworkAclId: !Ref "MyPrivateNetworkACL"
 
   MyPrivateSubnet2NetworkAclAssociation:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
     Properties:
       SubnetId: !Ref "PrivateSubnet2"
-      NetworkAclId: !Ref "MyNetworkACL"
+      NetworkAclId: !Ref "MyPrivateNetworkACL"
 
 
 Outputs: 
@@ -304,9 +312,13 @@ Outputs:
     Export:
       Name: !Sub "${PMServerEnv}-VPC"
 
-  MyNetworkACL: 
-    Description: "A reference to the created VPC"
-    Value: !Ref "MyNetworkACL"
+  MyPublicNetworkACL: 
+    Description: "A reference to the Public Network ACL"
+    Value: !Ref "MyPublicNetworkACL"
+
+  MyPrivateNetworkACL: 
+    Description: "A reference to the Private Network ACL"
+    Value: !Ref "MyPrivateNetworkACL"
 
   PublicSubnets:
     Description: "A list of the public subnets"
