--- a/master.yaml
+++ b/master.yaml
@@ -123,7 +123,7 @@ Resources:
 
   MyVPC:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    # Condition: "UseProdEnv"
     DependsOn:
     - "MyS3Bucket"
     Properties:
