--- a/infrastructure/atlassian-securitygroup.yaml
+++ b/infrastructure/atlassian-securitygroup.yaml
@@ -19,8 +19,16 @@ Parameters:
     Description: "VPC to launch instances into"
     Type: "AWS::EC2::VPC::Id"
 
-  PMNACL:
-    Description: "Network ACL Id"
+  PMVpcCIDR:
+    Description: "Please enter the IP range (CIDR notation) for this VPC"
+    Type: "String"
+
+  PMPublicNACL:
+    Description: "Public Network ACL Id"
+    Type: "String"
+
+  PMPrivateNACL:
+    Description: "Private Network ACL Id"
     Type: "String"
 
   PMOWNIP:
@@ -109,13 +117,130 @@ Resources:
       Tags:
         - Key: "Name"
           Value: !Sub "${PMServerEnv}-JiraELBSG"
+
   #####################################################################################
-  # Additional Firewall Protection (inbound and outbound traffic at the subnet level)
+  # Private Network ACL Firewall Protection (inbound and outbound traffic at the subnet level)
+  #####################################################################################
+
+  ####### INBOUND SSH Network ACL RULES #######
+  InboundSSHNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '100'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "false"
+      CidrBlock: !Ref "PMVpcCIDR"
+      PortRange:
+        From: '22'
+        To: '22'
+
+  ####### INBOUND MYSQL Network ACL RULES #######
+  InboundMYSQLNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '200'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "false"
+      CidrBlock: !Ref "PMVpcCIDR"
+      PortRange:
+        From: '3306'
+        To: '3306'
+
+  ####### INBOUND Ephemeral Ports Network ACL RULES #######
+  InboundEPHNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '300'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "false"
+      CidrBlock: "0.0.0.0/0"
+      PortRange:
+        From: '1024'
+        To: '65535'
+
+  ####### INBOUND ICMP Network ACL RULES #######
+  InboundICMPNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '400'
+      Protocol: "1"
+      RuleAction: "allow"
+      Egress: "false"
+      CidrBlock: "0.0.0.0/0"
+      Icmp:
+        Code: "-1"
+        Type: "-1"
+
+  ####### OUTBOUND SSH Network ACL RULES #######
+  OutboundSSHNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '100'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "true"
+      CidrBlock: !Ref "PMVpcCIDR"
+      PortRange:
+        From: '22'
+        To: '22'
+
+  ####### OUTBOUND MYSQL Network ACL RULES #######
+  OutboundMYSQLNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '200'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "true"
+      CidrBlock: !Ref "PMVpcCIDR"
+      PortRange:
+        From: '3306'
+        To: '3306'
+
+  ####### OUTBOUND Ephemeral Ports Network ACL RULES #######
+  OutboundEPHNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '300'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "true"
+      CidrBlock: "0.0.0.0/0"
+      PortRange:
+        From: '1024'
+        To: '65535'
+
+  ####### OUTBOUND ICMP Network ACL RULES #######
+  OutboundICMPNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '400'
+      Protocol: "1"
+      RuleAction: "allow"
+      Egress: "true"
+      CidrBlock: "0.0.0.0/0"
+      Icmp:
+        Code: "-1"
+        Type: "-1"
+
+  #####################################################################################
+  # Public Network ACL Firewall Protection (inbound and outbound traffic at the subnet level)
   ####### INBOUND HTTP Network ACL RULES ##############################################
   InboundHTTPNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
+      NetworkAclId: !Ref "PMPublicNACL"
       RuleNumber: '100'
       Protocol: "6"
       RuleAction: "allow"
@@ -129,7 +254,7 @@ Resources:
   InboundHTTPSNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
+      NetworkAclId: !Ref "PMPublicNACL"
       RuleNumber: '200'
       Protocol: "6"
       RuleAction: "allow"
@@ -139,40 +264,12 @@ Resources:
         From: '443'
         To: '443'
 
-  ####### INBOUND SSH Network ACL RULES #######
-  InboundSSHNACL:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '300'
-      Protocol: "6"
-      RuleAction: "allow"
-      Egress: "false"
-      CidrBlock: !Ref "PMOWNIP"
-      PortRange:
-        From: '22'
-        To: '22'
-
-  ####### INBOUND MYSQL Network ACL RULES #######
-  InboundMYSQLNACL:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '400'
-      Protocol: "6"
-      RuleAction: "allow"
-      Egress: "false"
-      CidrBlock: !Ref "PMOWNIP"
-      PortRange:
-        From: '3306'
-        To: '3306'
-
   ####### INBOUND Ephemeral Ports Network ACL RULES #######
   InboundEPHNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '500'
+      NetworkAclId: !Ref "PMPublicNACL"
+      RuleNumber: '300'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "false"
@@ -185,8 +282,8 @@ Resources:
   InboundICMPNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '600'
+      NetworkAclId: !Ref "PMPublicNACL"
+      RuleNumber: '400'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "false"
@@ -199,7 +296,7 @@ Resources:
   OutboundHTTPNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
+      NetworkAclId: !Ref "PMPublicNACL"
       RuleNumber: '100'
       Protocol: "6"
       RuleAction: "allow"
@@ -213,7 +310,7 @@ Resources:
   OutboundHTTPSNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
+      NetworkAclId: !Ref "PMPublicNACL"
       RuleNumber: '200'
       Protocol: "6"
       RuleAction: "allow"
@@ -223,40 +320,12 @@ Resources:
         From: '443'
         To: '443'
 
-  ####### OUTBOUND SSH Network ACL RULES #######
-  OutboundSSHNACL:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '300'
-      Protocol: "6"
-      RuleAction: "allow"
-      Egress: "true"
-      CidrBlock: !Ref "PMOWNIP"
-      PortRange:
-        From: '22'
-        To: '22'
-
-  ####### OUTBOUND MYSQL Network ACL RULES #######
-  OutboundMYSQLNACL:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '400'
-      Protocol: "6"
-      RuleAction: "allow"
-      Egress: "true"
-      CidrBlock: !Ref "PMOWNIP"
-      PortRange:
-        From: '3306'
-        To: '3306'
-
   ####### OUTBOUND Ephemeral Ports Network ACL RULES #######
   OutboundEPHNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '500'
+      NetworkAclId: !Ref "PMPublicNACL"
+      RuleNumber: '300'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "true"
@@ -269,8 +338,8 @@ Resources:
   OutboundICMPNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '600'
+      NetworkAclId: !Ref "PMPublicNACL"
+      RuleNumber: '400'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "true"
@@ -278,7 +347,6 @@ Resources:
       Icmp:
         Code: "-1"
         Type: "-1"
-
 
 Outputs:
 
