--- a/infrastructure/atlassian-securitygroup.yaml
+++ b/infrastructure/atlassian-securitygroup.yaml
@@ -47,7 +47,7 @@ Resources:
           FromPort: '-1'
           ToPort: '-1'
           CidrIp: '0.0.0.0/0'
-        - CidrIp: !Ref "PMOWNIP"
+        - CidrIp: !Ref "PMVpcCIDR"
           FromPort: "22"
           IpProtocol: "tcp"
           ToPort: "22"
