--- a/infrastructure/atlassian-securitygroup.yaml
+++ b/infrastructure/atlassian-securitygroup.yaml
@@ -123,7 +123,7 @@ Resources:
   #####################################################################################
 
   ####### INBOUND SSH Network ACL RULES #######
-  InboundSSHNACL:
+  InboundSSHNACLP:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
@@ -179,7 +179,7 @@ Resources:
         Type: "-1"
 
   ####### OUTBOUND SSH Network ACL RULES #######
-  OutboundSSHNACL:
+  OutboundSSHNACLP:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
@@ -264,12 +264,26 @@ Resources:
         From: '443'
         To: '443'
 
+  ####### INBOUND SSH Network ACL RULES #######
+  InboundSSHNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPublicNACL"
+      RuleNumber: '300'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "false"
+      CidrBlock: !Ref "PMOWNIP"
+      PortRange:
+        From: '22'
+        To: '22'
+
   ####### INBOUND Ephemeral Ports Network ACL RULES #######
   InboundEPHNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPublicNACL"
-      RuleNumber: '300'
+      RuleNumber: '400'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "false"
@@ -283,7 +297,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPublicNACL"
-      RuleNumber: '400'
+      RuleNumber: '500'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "false"
@@ -320,12 +334,26 @@ Resources:
         From: '443'
         To: '443'
 
+  ####### OUTBOUND SSH Network ACL RULES #######
+  OutboundSSHNACL:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPublicNACL"
+      RuleNumber: '300'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "true"
+      CidrBlock: !Ref "PMOWNIP"
+      PortRange:
+        From: '22'
+        To: '22'
+
   ####### OUTBOUND Ephemeral Ports Network ACL RULES #######
   OutboundEPHNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPublicNACL"
-      RuleNumber: '300'
+      RuleNumber: '400'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "true"
@@ -339,7 +367,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPublicNACL"
-      RuleNumber: '400'
+      RuleNumber: '500'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "true"
