--- a/infrastructure/atlassian-elb.yaml
+++ b/infrastructure/atlassian-elb.yaml
@@ -46,13 +46,13 @@ Resources:
         Enabled: 'True'
         S3BucketName: !Ref "PMS3Logging"
         S3BucketPrefix: "ELBLogs"
-      # HealthCheck:
-      #   HealthyThreshold: '6'
-      #   Interval: '60'
-      #   Target: "TCP:22"
-      #   # Target: "TCP:8000"
-      #   Timeout: '5'
-      #   UnhealthyThreshold: '8'
+      HealthCheck:
+        HealthyThreshold: '6'
+        Interval: '60'
+        Target: "TCP:22"
+        # Target: "TCP:8000"
+        Timeout: '5'
+        UnhealthyThreshold: '8'
       LoadBalancerName: !Sub "${PMServerEnv}-ELB"
       Listeners:
       - LoadBalancerPort: '80'
