--- a/master.yaml
+++ b/master.yaml
@@ -153,6 +153,7 @@ Resources:
         PMVPC: !GetAtt "MyVPC.Outputs.VPC"
         PMPublicNACL: !GetAtt "MyVPC.Outputs.MyPublicNetworkACL"
         PMPrivateNACL: !GetAtt "MyVPC.Outputs.MyPrivateNetworkACL"
+        PMNACL: !GetAtt "MyVPC.Outputs.MyNetworkACL"
 
   MyRDS:
     Type: "AWS::CloudFormation::Stack"
@@ -193,7 +194,7 @@ Resources:
 
   MyJiraAutoScaling:
     Type: "AWS::CloudFormation::Stack"
-    # Condition: "UseProdEnv"
+    Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraELB"
     Properties:
