--- a/infrastructure/atlassian-vpc.yaml
+++ b/infrastructure/atlassian-vpc.yaml
@@ -277,6 +277,14 @@ Resources:
         - Key: "Name"
           Value: !Sub "${PMServerEnv}-MyPrivateNetworkACL"
 
+  MyNetworkACL:
+    Type: "AWS::EC2::NetworkAcl"
+    Properties:
+      VpcId: !Ref "VPC"
+      Tags:
+        - Key: "Name"
+          Value: !Sub "${PMServerEnv}-MyNetworkACL"
+
 ######## Associate Public Subnet to Network ACL #######
   MyPublicSubnet1NetworkAclAssociation:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
