--- a/infrastructure/atlassian-securitygroup.yaml
+++ b/infrastructure/atlassian-securitygroup.yaml
@@ -23,6 +23,10 @@ Parameters:
     Description: "Please enter the IP range (CIDR notation) for this VPC"
     Type: "String"
 
+  PMNACL:
+    Description: "Refence Network ACL Id"
+    Type: "String"
+
   PMPublicNACL:
     Description: "Public Network ACL Id"
     Type: "String"
