--- a/master.yaml
+++ b/master.yaml
@@ -140,7 +140,7 @@ Resources:
 
   MySecurityGroup:
     Type: "AWS::CloudFormation::Stack"
-    # Condition: "UseProdEnv"
+    Condition: "UseProdEnv"
     DependsOn:
     - "MyVPC"
     Properties:
@@ -157,7 +157,7 @@ Resources:
 
   MyRDS:
     Type: "AWS::CloudFormation::Stack"
-    # Condition: "UseProdEnv"
+    Condition: "UseProdEnv"
     DependsOn:
     - "MySecurityGroup"
     Properties:
@@ -178,7 +178,7 @@ Resources:
 
   MyJiraELB:
     Type: "AWS::CloudFormation::Stack"
-    # Condition: "UseProdEnv"
+    Condition: "UseProdEnv"
     DependsOn:
     - "MyRDS"
     Properties:
