--- a/infrastructure/atlassian-vpc.yaml
+++ b/infrastructure/atlassian-vpc.yaml
@@ -290,13 +290,13 @@ Resources:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
     Properties:
       SubnetId: !Ref "PublicSubnet1"
-      NetworkAclId: !Ref "MyNetworkACL"
+      NetworkAclId: !Ref "MyPublicNetworkACL"
 
   MyPublicSubnet2NetworkAclAssociation:
     Type: "AWS::EC2::SubnetNetworkAclAssociation"
     Properties:
       SubnetId: !Ref "PublicSubnet2"
-      NetworkAclId: !Ref "MyNetworkACL"
+      NetworkAclId: !Ref "MyPrivateNetworkACL"
 
 ######## Associate Private Subnet to Network ACL #######
   MyPrivateSubnet1NetworkAclAssociation:
@@ -312,7 +312,7 @@ Resources:
       NetworkAclId: !Ref "MyNetworkACL"
 
 
-Outputs: 
+Outputs:
 
   VPC: 
     Description: "A reference to the created VPC"
