--- a/infrastructure/atlassian-securitygroup.yaml
+++ b/infrastructure/atlassian-securitygroup.yaml
@@ -148,12 +148,40 @@ Resources:
   # Private Network ACL Firewall Protection (inbound and outbound traffic at the subnet level)
   #####################################################################################
 
+  ####### INBOUND HTTP Network ACL RULES ##############################################
+  InboundHTTPNACLP:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '100'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "false"
+      CidrBlock: "0.0.0.0/0"
+      PortRange:
+        From: '80'
+        To: '80'
+
+  ####### INBOUND HTTPS Network ACL RULES #######
+  InboundHTTPSNACLP:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '200'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "false"
+      CidrBlock: "0.0.0.0/0"
+      PortRange:
+        From: '443'
+        To: '443'
+
   ####### INBOUND SSH Network ACL RULES #######
   InboundSSHNACLP:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '100'
+      RuleNumber: '300'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "false"
@@ -163,11 +191,11 @@ Resources:
         To: '22'
 
   ####### INBOUND MYSQL Network ACL RULES #######
-  InboundMYSQLNACL:
+  InboundMYSQLNACLP:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '200'
+      RuleNumber: '400'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "false"
@@ -181,7 +209,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '300'
+      RuleNumber: '500'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "false"
@@ -195,7 +223,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '400'
+      RuleNumber: '600'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "false"
@@ -204,12 +232,40 @@ Resources:
         Code: "-1"
         Type: "-1"
 
+  ####### OUTBOUND HTTP Network ACL RULES #######
+  OutboundHTTPNACLP:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '100'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "true"
+      CidrBlock: "0.0.0.0/0"
+      PortRange:
+        From: '80'
+        To: '80'
+
+  ####### OUTBOUND HTTPS Network ACL RULES #######
+  OutboundHTTPSNACLP:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      NetworkAclId: !Ref "PMPrivateNACL"
+      RuleNumber: '200'
+      Protocol: "6"
+      RuleAction: "allow"
+      Egress: "true"
+      CidrBlock: "0.0.0.0/0"
+      PortRange:
+        From: '443'
+        To: '443'
+
   ####### OUTBOUND SSH Network ACL RULES #######
   OutboundSSHNACLP:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '100'
+      RuleNumber: '300'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "true"
@@ -219,11 +275,11 @@ Resources:
         To: '22'
 
   ####### OUTBOUND MYSQL Network ACL RULES #######
-  OutboundMYSQLNACL:
+  OutboundMYSQLNACLP:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '200'
+      RuleNumber: '400'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "true"
@@ -237,7 +293,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '300'
+      RuleNumber: '500'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "true"
@@ -251,7 +307,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMPrivateNACL"
-      RuleNumber: '400'
+      RuleNumber: '600'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "true"
