--- a/master.yaml
+++ b/master.yaml
@@ -140,7 +140,7 @@ Resources:
 
   MySecurityGroup:
     Type: "AWS::CloudFormation::Stack"
-    # Condition: "UseProdEnv"
+    Condition: "UseProdEnv"
     DependsOn:
     - "MyVPC"
     Properties:
