--- a/master.yaml
+++ b/master.yaml
@@ -107,7 +107,7 @@ Resources:
 
   MyIAMRole:
     Type: "AWS::CloudFormation::Stack"
-    #Condition: "UseProdEnv"
+    Condition: "UseProdEnv"
     Properties:
       TemplateURL: !Sub "${PMTemplateURL}/atlassian-iam.yaml"
       TimeoutInMinutes: '5'
@@ -116,7 +116,7 @@ Resources:
 
   MyS3Bucket:
     Type: "AWS::CloudFormation::Stack"
-    #Condition: "UseProdEnv"
+    Condition: "UseProdEnv"
     Properties:
       TemplateURL: !Sub "${PMTemplateURL}/atlassian-s3bucket.yaml"
       TimeoutInMinutes: '5'
